# ciscript

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: export.py  workflow.py  workflow.yaml
src/ciscript/: __init__.py  _typing.py  _utils.py  github.py  yaml.py
tests/: conftest.py  utils.py
tests/github/: test_github.py
tests/github/test_github/: test_basic.yaml  test_basic.yml
